--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
 		<title>GMOs</title>
 
 		<meta charset="utf-8">
-		<meta name="description" content="A Quick Guide to Mental Health">
-		<meta name="keywords" content="Mental Health, Awareness, Social Action, Mental Hygiene, Global Issues">
+		<meta name="description" content="">
+		<meta name="keywords" content="Social Action, Global Issues">
 		<meta name="author" content="Hunter Chen, Umut Emre">
 
 		<link href="https://fonts.googleapis.com/css?family=Chicle" rel="stylesheet"> 
