--- a/index.html
+++ b/index.html
@@ -18,9 +18,98 @@
 		<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.0/umd/popper.min.js" integrity="sha384-cs/chFZiN24E4KMATLdqdvsezGxaGsi4hLGOzlXwp5UZB1LY//20VyM2taTB4QvJ" crossorigin="anonymous"></script>
 		<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.0/js/bootstrap.min.js" integrity="sha384-uefMccjFJAIv6A+rW+L4AHf99KvxDjWSu1z9VI8SKNVmz4sk7buKt/6v9KI65qnm" crossorigin="anonymous"></script>
 
+
+		<style type="text/css">
+			
+			body {
+				font-family: 'Times New Roman';
+				background-image: url('https://m.popkey.co/f9764a/DyXOX_s-200x150.gif');
+
+			}
+
+			p {
+				font-size: 2em;
+			}
+
+			li {
+				font-size: 1.5em;
+			}
+
+
+			#rotate0 {
+
+			}
+
+			#rotate1 {
+			  transform: rotate(90deg) translateY(-100%);
+			  -webkit-transform: rotate(90deg) translateY(-100%);
+			  -ms-transform: rotate(90deg) translateY(-100%);
+			}
+			#rotate2 {
+			  transform: rotate(180deg) translate(-100%, -100%);
+			  -webkit-transform: rotate(180deg) translate(-100%, -100%);
+			  -ms-transform: rotate(180deg) translateX(-100%, -100%);
+			}
+			#rotate3 {
+			  transform: rotate(270deg) translateX(-100%);
+			  -webkit-transform: rotate(270deg) translateX(-100%);
+			  -ms-transform: rotate(270deg) translateX(-100%);
+			}
+		</style>
+
+		<script type="text/javascript">
+			var angle = 0;
+
+			function pantRotator() {
+			    
+			    document.getElementsByClassName("pant")[0].id = "rotate" + angle 
+			    angle++;
+			    if (angle > 3) {
+			    	angle = 0;
+			    }
+
+			    console.log("kek")
+			} 
+
+			var interval1 = setInterval(pantRotator, 1000);
+
+		</script>
 	</head>
 
 	<body>
-		<h1>If u read this, u succ heptagay</h1>
+		 <audio>
+		  <source src="horse.ogg" type="audio/ogg">
+		  <source src="horse.mp3" type="audio/mpeg">
+			Your browser does not support the audio element.
+		</audio> 
+
+		<div style=" position: absolute; float: left; top: 60%;left: 50%; transform: translate(-50%, -50%); text-align: center;">
+			<h1 style="font-size: 8em; font-family: 'Times New Roman'; "><strong>404 Not Found</strong></h1>
+			<ul>
+				<li>Roses are red</li>
+				<li>Websites are a bore</li>
+				<li>This site is currently being updated and will come online very soon</li>
+				<li>For now, 404</li>
+			</ul>
+
+			<h1 style="font-size: 2em"><strong><a href="https://www.youtube.com/watch?v=JzvDoyW5u5g">If there are any feedbacks concerns or complaints to address to the developer, please click here</a></strong></h1>
+		</div>
+
+		<div>
+			<img src="img/pant.png" class="pant" id="pant">
+			<p>Here is a juicy pair of pants you can eat while you wait</p>
+		</div>
+			
+		<img src="img/phil.png" class="pant" id="pant">
+		<img src="img/suffer.png" style="float: right;" class="pant" id="pant">
+
+
+		<img src="https://media.giphy.com/media/14fHY7Jpw6IXOU/giphy.gif" style="float: bottom;" class="pant" id="pant">
+
+		<p style="font-size: 12px; position:absolute; bottom:0; left: 50%; transform: translate(-50%, -50%)"> Rawr x3 nuzzles how are you pounces on you you're so warm o3o notices you have an INTERNET ERROR o: someone's happy nuzzles your BROWSER~ murr hehehe INTERNET DEVELOPER you're so NOT FUNCTIONING AT THE MOMENT :oooo r
+ </p>
+
+
+
 	</body>
-</html>
+</html>	
