--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
 		</audio> 
 
 		<div style=" position: absolute; float: left; top: 60%;left: 50%; transform: translate(-50%, -50%); text-align: center;">
-			<h1 style="font-size: 8em; font-family: 'Times New Roman'; "><strong>404 Not Found</strong></h1>
+			<h1 style="font-size: 4em; font-family: 'Times New Roman'; "><strong>Error: Incompatible Browser</strong></h1>
 			<ul>
 				<li>Roses are red</li>
 				<li>Websites are a bore</li>
@@ -100,7 +100,7 @@
 			<p>Here is a juicy pair of pants you can eat while you wait</p>
 		</div>
 			
-		<img src="img/phil.png" class="pant" id="pant">
+		<img src="img/phil.png" style=" position:absolute; top:0; left: 50%; transform: translate(-50%, -50%)" class="pant" id="pant">
 		<img src="img/suffer.png" style="float: right;" class="pant" id="pant">
 
 
