Add baby filter

--- a/index.html
+++ b/index.html
@@ -67,8 +67,6 @@
 			    if (angle > 3) {
 			    	angle = 0;
 			    }
-
-			    console.log("kek")
 			} 
 
 			var interval1 = setInterval(pantRotator, 1000);
@@ -77,12 +75,6 @@
 	</head>
 
 	<body>
-		 <audio>
-		  <source src="horse.ogg" type="audio/ogg">
-		  <source src="horse.mp3" type="audio/mpeg">
-			Your browser does not support the audio element.
-		</audio> 
-
 		<div style=" position: absolute; float: left; top: 60%;left: 50%; transform: translate(-50%, -50%); text-align: center;">
 			<h1 style="font-size: 4em; font-family: 'Times New Roman'; "><strong>Error: Incompatible Browser</strong></h1>
 			<ul>
@@ -104,7 +96,7 @@
 		<img src="img/suffer.png" style="float: right;" class="pant" id="pant">
 
 
-		<img src="https://media.giphy.com/media/14fHY7Jpw6IXOU/giphy.gif" style="float: bottom;" class="pant" id="pant">
+		<img src="https://giphy.com/gifs/obama-president-make-it-rain-mpYstSDYP9YAM" style="float: bottom;" class="pant" id="pant">
 
 		<p style="font-size: 12px; position:absolute; bottom:0; left: 50%; transform: translate(-50%, -50%)"> Rawr x3 nuzzles how are you pounces on you you're so warm o3o notices you have an INTERNET ERROR o: someone's happy nuzzles your BROWSER~ murr hehehe INTERNET DEVELOPER you're so NOT FUNCTIONING AT THE MOMENT :oooo r
  </p>
