--- a/index.html
+++ b/index.html
@@ -51,17 +51,17 @@
 		<div class="container-fluid pt-5">
 			<div class="row justify-content-around">
 				<div class="col-xl-2">
-					<h3><strong>What the jiminy crickets</strong></h3>
+					<h3><strong>An Introduction to GMOs</strong></h3>
+					<p>GMO stands for Genetically Modified Organism. </p>
+				</div>
+
+				<div class="col-xl-2">
+					<h3><strong>Title</strong></h3>
 					<p>did you just flaming say about me, you little bozo? I’ll have you know I graduated top of my class in the Cub Scouts, and I’ve been involved in numerous secret camping trips in Wyoming, and I have over 300 confirmed knots. I am trained in first aid and I’m the top bandager in the entire US Boy Scouts (of America).</p>
 				</div>
 
 				<div class="col-xl-2">
-					<h3><strong>What the jiminy crickets</strong></h3>
-					<p>did you just flaming say about me, you little bozo? I’ll have you know I graduated top of my class in the Cub Scouts, and I’ve been involved in numerous secret camping trips in Wyoming, and I have over 300 confirmed knots. I am trained in first aid and I’m the top bandager in the entire US Boy Scouts (of America).</p>
-				</div>
-
-				<div class="col-xl-2">
-					<h3><strong>What the jiminy crickets</strong></h3>
+					<h3><strong>Title</strong></h3>
 					<p>did you just flaming say about me, you little bozo? I’ll have you know I graduated top of my class in the Cub Scouts, and I’ve been involved in numerous secret camping trips in Wyoming, and I have over 300 confirmed knots. I am trained in first aid and I’m the top bandager in the entire US Boy Scouts (of America).</p>
 				</div>
 			</div>
