--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
 				</div>
 
 				<div class="col-xl-2">
-					<h3><strong>Title</strong></h3>
+					<h3><strong>What the jiminy crickets did you</strong></h3>
 					<p>did you just flaming say about me, you little bozo? I’ll have you know I graduated top of my class in the Cub Scouts, and I’ve been involved in numerous secret camping trips in Wyoming, and I have over 300 confirmed knots. I am trained in first aid and I’m the top bandager in the entire US Boy Scouts (of America).</p>
 				</div>
 
