--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 
 		<link rel="stylesheet" href="css/stylesheet.css">
 
-		<script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
+		<script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965Dz	O0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
 		<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.0/umd/popper.min.js" integrity="sha384-cs/chFZiN24E4KMATLdqdvsezGxaGsi4hLGOzlXwp5UZB1LY//20VyM2taTB4QvJ" crossorigin="anonymous"></script>
 		<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.0/js/bootstrap.min.js" integrity="sha384-uefMccjFJAIv6A+rW+L4AHf99KvxDjWSu1z9VI8SKNVmz4sk7buKt/6v9KI65qnm" crossorigin="anonymous"></script>
 
@@ -52,11 +52,11 @@
 			<div class="row justify-content-around">
 				<div class="col-xl-2">
 					<h3><strong>An Introduction to GMOs</strong></h3>
-					<p>GMO stands for Genetically Modified Organism. </p>
+					<p>GMO stands for Genetically Modified Organism. The process started around the 1930s and was done with a very chance-based method as alfa and beta radiation were used to (hopefully) knock out certain genes and for the organism to insert a desired mutation. The organism uses the CRISPR-CAS9 system in nature and we can now choose what we want to remove and what to replace it with</p>
 				</div>
 
 				<div class="col-xl-2">
-					<h3><strong>What the jiminy crickets did you</strong></h3>
+					<h3><strong>Title</strong></h3>
 					<p>did you just flaming say about me, you little bozo? I’ll have you know I graduated top of my class in the Cub Scouts, and I’ve been involved in numerous secret camping trips in Wyoming, and I have over 300 confirmed knots. I am trained in first aid and I’m the top bandager in the entire US Boy Scouts (of America).</p>
 				</div>
 
