--- a/index.html
+++ b/index.html
@@ -52,17 +52,17 @@
 			<div class="row justify-content-around">
 				<div class="col-xl-2">
 					<h3><strong>An Introduction to GMOs</strong></h3>
-					<p>GMO stands for Genetically Modified Organism. The process started around the 1930s and was done with a very chance-based method. Alfa and beta radiation was used to (hopefully) knock out certain genes and have the organism to insert a desired mutation. The organism uses the CRISPR-CAS9 system in nature and we can now choose what we want to remove and what to replace it with</p>
+					<p>GMO stands for Genetically Modified Organism. The process started around the 1930s and was done with a very chance-based method. Alpha and beta radiation was used to (hopefully) knock out certain genes and have the organism to insert a desired mutation. The organism uses the CRISPR-CAS9 system in nature and we can now choose what we want to remove and what to replace it with</p>
 				</div>
 
 				<div class="col-xl-2">
 					<h3><strong>Title</strong></h3>
-					<p>did you just flaming say about me, you little bozo? I’ll have you know I graduated top of my class in the Cub Scouts, and I’ve been involved in numerous secret camping trips in Wyoming, and I have over 300 confirmed knots. I am trained in first aid and I’m the top bandager in the entire US Boy Scouts (of America).</p>
+					<p>Paragraph</p>
 				</div>
 
 				<div class="col-xl-2">
 					<h3><strong>Title</strong></h3>
-					<p>did you just flaming say about me, you little bozo? I’ll have you know I graduated top of my class in the Cub Scouts, and I’ve been involved in numerous secret camping trips in Wyoming, and I have over 300 confirmed knots. I am trained in first aid and I’m the top bandager in the entire US Boy Scouts (of America).</p>
+					<p>Paragraph</p>
 				</div>
 			</div>
 
