--- a/index.html
+++ b/index.html
@@ -52,12 +52,12 @@
 			<div class="row justify-content-around">
 				<div class="col-xl-2">
 					<h3><strong>An Introduction to GMOs</strong></h3>
-					<p>GMO stands for Genetically Modified Organism. The process started around the 1930s and was done with a very chance-based method. Alpha and beta radiation was used to (hopefully) knock out certain genes and have the organism to insert a desired mutation. The organism uses the CRISPR-CAS9 system in nature and we can now choose what we want to remove and what to replace it with</p>
+					<p>GMO stands for Genetically Modified Organism. The process started around the 1930s and was done with a very chance-based method. Alfa and beta radiation was used to (hopefully) knock out certain genes and have the organism to insert a desired mutation. The organism uses the CRISPR-CAS9 system in nature and we can now choose what we want to remove and what to replace it with, while using the same system.</p>
 				</div>
 
 				<div class="col-xl-2">
-					<h3><strong>Title</strong></h3>
-					<p>Paragraph</p>
+					<h3><strong>How CRISPR is used</strong></h3>
+					<p>CRISPR is a complex system that deals with DNA. In short, proteins of T-RNA find certain segments of DNA and the CAS-9 protien replaces it with a different segment. Scientists now tell T-RNA what to find and CAS-9 what it should be replaced with.</p>
 				</div>
 
 				<div class="col-xl-2">
