--- a/index.html
+++ b/index.html
@@ -61,8 +61,8 @@
 				</div>
 
 				<div class="col-xl-2">
-					<h3><strong>Title</strong></h3>
-					<p>Paragraph</p>
+					<h3><strong>Image link</strong></h3>
+					<p>https://free4kwallpaper.com/vegetables-and-2016-fruit-4k-wallpaper/</p>
 				</div>
 			</div>
 
