--- a/faq.html
+++ b/faq.html
@@ -159,6 +159,78 @@
 
 			<br>
 
+			<div class="row justify-content-center q-a"> 
+				<div class="col-xl-5">
+					<h4>What the jiminy crickets did you just flaming say about me, you little bozo?</h4>
+				</div>
+
+				<div class="col-xl-5">
+					<p>I’ll have you know I graduated top of my class in the Cub Scouts, and I’ve been involved in numerous secret camping trips in Wyoming, and I have over 300 confirmed knots. I am trained in first aid and I’m the top bandager in the entire US Boy Scouts (of America). You are nothing to me but just another friendly face. </p>
+				</div>
+			</div>
+			
+			<br>
+
+			<div class="row justify-content-center q-a"> 
+				<div class="col-xl-5">
+					<h4>What the jiminy crickets did you just flaming say about me, you little bozo?</h4>
+				</div>
+
+				<div class="col-xl-5">
+					<p>I’ll have you know I graduated top of my class in the Cub Scouts, and I’ve been involved in numerous secret camping trips in Wyoming, and I have over 300 confirmed knots. I am trained in first aid and I’m the top bandager in the entire US Boy Scouts (of America). You are nothing to me but just another friendly face. </p>
+				</div>
+			</div>
+			
+			<br>
+
+			<div class="row justify-content-center q-a"> 
+				<div class="col-xl-5">
+					<h4>What the jiminy crickets did you just flaming say about me, you little bozo?</h4>
+				</div>
+
+				<div class="col-xl-5">
+					<p>I’ll have you know I graduated top of my class in the Cub Scouts, and I’ve been involved in numerous secret camping trips in Wyoming, and I have over 300 confirmed knots. I am trained in first aid and I’m the top bandager in the entire US Boy Scouts (of America). You are nothing to me but just another friendly face. </p>
+				</div>
+			</div>
+			
+			<br>
+
+			<div class="row justify-content-center q-a"> 
+				<div class="col-xl-5">
+					<h4>What the jiminy crickets did you just flaming say about me, you little bozo?</h4>
+				</div>
+
+				<div class="col-xl-5">
+					<p>I’ll have you know I graduated top of my class in the Cub Scouts, and I’ve been involved in numerous secret camping trips in Wyoming, and I have over 300 confirmed knots. I am trained in first aid and I’m the top bandager in the entire US Boy Scouts (of America). You are nothing to me but just another friendly face. </p>
+				</div>
+			</div>
+			
+			<br>
+
+			<div class="row justify-content-center q-a"> 
+				<div class="col-xl-5">
+					<h4>What the jiminy crickets did you just flaming say about me, you little bozo?</h4>
+				</div>
+
+				<div class="col-xl-5">
+					<p>I’ll have you know I graduated top of my class in the Cub Scouts, and I’ve been involved in numerous secret camping trips in Wyoming, and I have over 300 confirmed knots. I am trained in first aid and I’m the top bandager in the entire US Boy Scouts (of America). You are nothing to me but just another friendly face. </p>
+				</div>
+			</div>
+			
+			<br>
+
+			<div class="row justify-content-center q-a"> 
+				<div class="col-xl-5">
+					<h4>What the jiminy crickets did you just flaming say about me, you little bozo?</h4>
+				</div>
+
+				<div class="col-xl-5">
+					<p>I’ll have you know I graduated top of my class in the Cub Scouts, and I’ve been involved in numerous secret camping trips in Wyoming, and I have over 300 confirmed knots. I am trained in first aid and I’m the top bandager in the entire US Boy Scouts (of America). You are nothing to me but just another friendly face. </p>
+				</div>
+			</div>
+			
+			<br>
+
 		</div>
 
 
