--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 	<head>
-		<title>GMOs</title>
+		<title>GMO Foods</title>
 
 		<meta charset="utf-8">
 		<meta name="description" content="">
@@ -29,7 +29,7 @@
 						<button class="navbar-toggler" type="button", data-toggle="collapse" data-target="#main-navbar-nav" aria-controls="main-navbar-nav">
 							<span class="navbar-toggler-icon"> </span>
 						</button>
-						<a class="navbar-brand" href="#index"> GMO </a>
+						<a class="navbar-brand" href="#index"> GMO Food </a>
 					</div>
 
 					<div class="collapse navbar-collapse " id="main-navbar-nav">
