--- a/faq.html
+++ b/faq.html
@@ -29,7 +29,7 @@
 						<button class="navbar-toggler" type="button", data-toggle="collapse" data-target="#main-navbar-nav" aria-controls="main-navbar-nav">
 							<span class="navbar-toggler-icon"> </span>
 						</button>
-						<a class="navbar-brand" href="#index"> GMO </a>
+						<a class="navbar-brand" href="#index"> GMO Foods </a>
 					</div>
 
 					<div class="collapse navbar-collapse " id="main-navbar-nav">
