--- a/index.html
+++ b/index.html
@@ -61,8 +61,8 @@
 				</div>
 
 				<div class="col-xl-2">
-					<h3><strong>Image link</strong></h3>
-					<p>https://free4kwallpaper.com/vegetables-and-2016-fruit-4k-wallpaper/</p>
+					<h3><strong>Sample Text</strong></h3>
+					<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Etiam tincidunt, nisi non finibus venenatis, odio elit fringilla sapien, vitae porta nulla velit eget nisl. Nam gravida ac massa vel blandit. Fusce tempor sollicitudin dapibus. Proin eget venenatis est. Quisque lobortis imperdiet ipsum nec iaculis. Morbi suscipit a lacus sed egestas. Maecenas id urna in ex euismod sagittis. Morbi condimentum dui id ex facilisis, auctor molestie velit efficitur. Vivamus sit amet neque eu lectus dapibus porta non eget nibh.</p>
 				</div>
 			</div>
 
