--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
 
 				<div class="col-xl-2">
 					<h3><strong>How CRISPR is used</strong></h3>
-					<p>CRISPR is a complex system that deals with DNA. In short, proteins of T-RNA find certain segments of DNA and the CAS-9 protien replaces it with a different segment. Scientists now tell T-RNA what to find and CAS-9 what it should be replaced with.</p>
+					<p>CRISPR is a complex system that deals with DNA. In short, proteins of T-RNA find certain segments of DNA and the CAS-9 protein cuts it out and CrRNA replaces it with a different segment. Scientists now tell T-RNA what to find and CrRNA what it should be replaced with. The CRISPR CAS-9 systems is found in any organism.</p>
 				</div>
 
 				<div class="col-xl-2">
