--- a/index.html
+++ b/index.html
@@ -35,9 +35,9 @@
 					<div class="collapse navbar-collapse " id="main-navbar-nav">
 						<ul class="navbar-nav nav-right ml-auto">
 							<li class="nav-item active"> <a class="nav-link" href="index.html"> Home </a> </li>
-							<li class="nav-item"> <a class="nav-link" href="faq.html"> FAQ </a> </li>
-							<li class="nav-item"> <a class="nav-link" href="404.html"> Mythbusting </a> </li>
-							<li class="nav-item"> <a class="nav-link" href="404.html"> About us </a> </li>
+							<li class="nav-item"> <a class="nav-link" href="info.html"> General Info </a> </li>
+							<li class="nav-item"> <a class="nav-link" href="mythbusting.html"> Mythbusting </a> </li>
+							<li class="nav-item"> <a class="nav-link" href="about-us.html"> About us </a> </li>
 						</ul>
 					</div>
 				</div>
