Shrink mythbusting title

--- a/mythbusting.html
+++ b/mythbusting.html
@@ -45,7 +45,7 @@
 		</div>
 
 		<div class="container-fluid pl-xl-5">
-			<h1 class="large-title">Mythbusting</h1>
+			<h1 class="less-large-title">Mythbusting</h1>
 		</div>
 
 		<br>
