--- a/mythbusting.html
+++ b/mythbusting.html
@@ -67,9 +67,9 @@
 
 			<div class="row justify-content-center q-a"> 
 				<div class="col-xl-5">
-					<h4>What the jiminy crickets did you just flaming say about me, you little bozo?</h4>
+					<h4>Pesticides used with GMO foods are much worse than old pesticides</h4>
 
-					<p>I’ll have you know I graduated top of my class in the Cub Scouts, and I’ve been involved in numerous secret camping trips in Wyoming, and I have over 300 confirmed knots. I am trained in first aid and I’m the top bandager in the entire US Boy Scouts (of America). You are nothing to me but just another friendly face. </p>
+					<p>Some People may thing that GMOs increase pesticde usage by the need to care for the plant more. In fact, the plant makes its own pesticides, they are no-harmful to humans. It is only harmful to bugs and pests. GMO foods are actually more safe from a pesticide perspective as they require less use of pesticides since they modified to be more resistant and also produce more of their own.</p>
 				</div>
 
 				<div class="col-xl-3">
@@ -92,6 +92,64 @@
 			</div>
 
 			<br>
+			
+			<div class="row justify-content-center q-a"> 
+				<div class="col-xl-5">
+					<h4></h4>
+
+					<p></p>
+				</div>
+
+				<div class="col-xl-3">
+					<img src="img/suffer.png">
+				</div>
+			</div>
+
+			<br>
+
+			<div class="row justify-content-center q-a"> 
+				<div class="col-xl-3">
+					<img src="img/suffer.png">
+				</div>
+
+				<div class="col-xl-5">
+					<h4>What the jiminy crickets did you just flaming say about me, you little bozo?</h4>
+
+					<p>I’ll have you know I graduated top of my class in the Cub Scouts, and I’ve been involved in numerous secret camping trips in Wyoming, and I have over 300 confirmed knots. I am trained in first aid and I’m the top bandager in the entire US Boy Scouts (of America). You are nothing to me but just another friendly face. </p>
+				</div>
+			</div>
+
+			<br>
+			
+			<div class="row justify-content-center q-a"> 
+				<div class="col-xl-5">
+					<h4></h4>
+
+					<p></p>
+				</div>
+
+				<div class="col-xl-3">
+					<img src="img/suffer.png">
+				</div>
+			</div>
+
+			<br>
+
+			<div class="row justify-content-center q-a"> 
+				<div class="col-xl-3">
+					<img src="img/suffer.png">
+				</div>
+
+				<div class="col-xl-5">
+					<h4>What the jiminy crickets did you just flaming say about me, you little bozo?</h4>
+
+					<p>I’ll have you know I graduated top of my class in the Cub Scouts, and I’ve been involved in numerous secret camping trips in Wyoming, and I have over 300 confirmed knots. I am trained in first aid and I’m the top bandager in the entire US Boy Scouts (of America). You are nothing to me but just another friendly face. </p>
+				</div>
+			</div>
+
+			<br>
+
+
 
 		
 			<!-- <div class="row justify-content-center q-a"> 
