--- a/mythbusting.html
+++ b/mythbusting.html
@@ -95,7 +95,7 @@
 			
 			<div class="row justify-content-center q-a"> 
 				<div class="col-xl-5">
-					<h4></h4>
+					<h4>there is a heading 4 and a paragraph tag here</h4>
 
 					<p></p>
 				</div>
@@ -123,7 +123,7 @@
 			
 			<div class="row justify-content-center q-a"> 
 				<div class="col-xl-5">
-					<h4></h4>
+					<h4>there is a heading 4 and a paragraph tag here</h4>
 
 					<p></p>
 				</div>
