--- a/info.html
+++ b/info.html
@@ -61,9 +61,9 @@
 
 					<p>CRISPR is a complex system that deals with DNA. In short, proteins of T-RNA find certain segments of DNA and the CAS-9 protein cuts it out. CrRNA then replaces it with a different natural mutation or segment. Scientists can now tell T-RNA what to find and CrRNA what it should be replaced with. The CRISPR CAS-9 systems is found in any organism.</p>
 
-					<p>I’ll have you know I graduated top of my class in the Cub Scouts, and I’ve been involved in numerous secret camping trips in Wyoming, and I have over 300 confirmed knots. I am trained in first aid and I’m the top bandager in the entire US Boy Scouts (of America). You are nothing to me but just another friendly face. </p>
+					<p> </p>
 
-					<p>I’ll have you know I graduated top of my class in the Cub Scouts, and I’ve been involved in numerous secret camping trips in Wyoming, and I have over 300 confirmed knots. I am trained in first aid and I’m the top bandager in the entire US Boy Scouts (of America). You are nothing to me but just another friendly face. </p>
+					<p> </p>
 				</div>
 
 				<div class="col-xl-3">
@@ -80,9 +80,9 @@
 
 					<p>While food is quite abundant in a lot of countries, it is scarce in certain places. GMO plants have the ability to grow in, usually resource lacking, new environments. Scientists have created rice that is both drought and flood resistant. There is also a massive amount of use in developing nations. Over 75 countries produce GMO crops with most in developing nations. Nigeria has claimed that they will not be able to feed themselves without GMO crops. As the cost to produce GMO food is becoming cheaper and cheaper, HIPC (Heavily Indebted Poor Countries) have a big opportunity get back on their feet. GMOs have the potential to put an end to poverty. There is little doubt that GMO food will be the future of humanity, if we become a space faring civilization, they will be needed. Anywhere else, they can be used for reduced land use.</p>
 
-					<p>I’ll have you know I graduated top of my class in the Cub Scouts, and I’ve been involved in numerous secret camping trips in Wyoming, and I have over 300 confirmed knots. I am trained in first aid and I’m the top bandager in the entire US Boy Scouts (of America). You are nothing to me but just another friendly face. </p>
+					<p> </p>
 
-					<p>I’ll have you know I graduated top of my class in the Cub Scouts, and I’ve been involved in numerous secret camping trips in Wyoming, and I have over 300 confirmed knots. I am trained in first aid and I’m the top bandager in the entire US Boy Scouts (of America). You are nothing to me but just another friendly face. </p>
+					<p> </p>
 				</div>
 
 				<div class="col-xl-0">
@@ -95,13 +95,13 @@
 			<div class="row justify-content-center q-a"> 
 
 				<div class="col-xl-7">
-					<h4>What the jiminy crickets did you just flaming say about me, you little bozo?</h4>
+					<h4>Industrial Uses</h4>
 
-					<p>I’ll have you know I graduated top of my class in the Cub Scouts, and I’ve been involved in numerous secret camping trips in Wyoming, and I have over 300 confirmed knots. I am trained in first aid and I’m the top bandager in the entire US Boy Scouts (of America). You are nothing to me but just another friendly face. </p>
+					<p>There are many possible uses for GMO foods. The best example would be poverty. The Middle East and Africa are riddled with poverty and a poor quality of life. GMOs could be edited to grow in dry harsh environments and give a decent yield. Nigeria is in a great position to and is  open to GMO foods and has said that they would not be able to feed their population by 2030 without GMO food. Other countries would be able to benefit and maybe create an industry with it.</p>
 
-					<p>I’ll have you know I graduated top of my class in the Cub Scouts, and I’ve been involved in numerous secret camping trips in Wyoming, and I have over 300 confirmed knots. I am trained in first aid and I’m the top bandager in the entire US Boy Scouts (of America). You are nothing to me but just another friendly face. </p>
+					<p> </p>
 
-					<p>I’ll have you know I graduated top of my class in the Cub Scouts, and I’ve been involved in numerous secret camping trips in Wyoming, and I have over 300 confirmed knots. I am trained in first aid and I’m the top bandager in the entire US Boy Scouts (of America). You are nothing to me but just another friendly face. </p>
+					<p> </p>
 				</div>
 
 				<div class="col-xl-0">
@@ -114,13 +114,13 @@
 			<div class="row justify-content-center q-a"> 
 
 				<div class="col-xl-7">
-					<h4>What the jiminy crickets did you just flaming say about me, you little bozo?</h4>
+					<h4>Medical Uses</h4>
 
-					<p>I’ll have you know I graduated top of my class in the Cub Scouts, and I’ve been involved in numerous secret camping trips in Wyoming, and I have over 300 confirmed knots. I am trained in first aid and I’m the top bandager in the entire US Boy Scouts (of America). You are nothing to me but just another friendly face. </p>
+					<p>A recent study was done by the Babraham Institute by Patrick Varga-Weisz that showed that gut bacteria can control what genes are active in the human body. We would be able to induce more growth in certain bacterias and possibly decrease the rate of birth deformities through disabling certain genes from the parent by inducing growth in certain bacteria niches. </p>
 
-					<p>I’ll have you know I graduated top of my class in the Cub Scouts, and I’ve been involved in numerous secret camping trips in Wyoming, and I have over 300 confirmed knots. I am trained in first aid and I’m the top bandager in the entire US Boy Scouts (of America). You are nothing to me but just another friendly face. </p>
+					<p> </p>
 
-					<p>I’ll have you know I graduated top of my class in the Cub Scouts, and I’ve been involved in numerous secret camping trips in Wyoming, and I have over 300 confirmed knots. I am trained in first aid and I’m the top bandager in the entire US Boy Scouts (of America). You are nothing to me but just another friendly face. </p>
+					<p> </p>
 				</div>
 
 				<div class="col-xl-0">
